# aws-python-argparse

./: .gitignore  pyproject.toml
src/: args.py  auth.py  aws_scripts.py  main.py
