[project]
name = "awspythonargparse"
version = "0.1.0"
description = ""
authors = [
    {name = "Zuka Esakia",email = "A.Esakia@smartsoft.ge"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "awspythonargparse", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
